deployment/staging/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zk-gaming-tk
spec:
  selector:
    matchLabels:
      app: zk-gaming-tk
  template:
    spec:
      containers:
        - name: zk-gaming-tk
          imagePullPolicy: Always
          image: eu.gcr.io/web3-335312/aleo/zk-gaming-tk:latest
